# raindrop-cleanup

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  complete_raindrop_cleaner.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
.raindrop_state/: collection_58040379_linux-unix.json
raindrop_cleanup/: __init__.py
raindrop_cleanup/ai/: __init__.py  claude_analyzer.py  default_prompt.txt  prompt_config.py
raindrop_cleanup/api/: __init__.py  raindrop_client.py
raindrop_cleanup/cli/: __init__.py  main.py
raindrop_cleanup/core/: __init__.py  processor.py
raindrop_cleanup/state/: __init__.py  manager.py
raindrop_cleanup/ui/: __init__.py  interfaces.py
tests/: __init__.py  conftest.py
tests/integration/: test_core_processor.py
tests/unit/: test_api_client.py  test_claude_analyzer.py  test_cli_main.py  test_state_manager.py  test_ui_interfaces.py
